[package]
name = "wvm-svm"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.2"
borsh-derive = "1.5.2"
brotlic = "0.8.2"
dotenv = "0.15.0"
ethers = "2.0.14"
ethers-providers = "2.0.14"
ethers_provider = "0.2.2"
futures = "0.3.31"
serde_json = "1.0.132"
solana-bpf-loader-program = "2.1.0"
solana-client = "2.1.0"
solana-compute-budget = "2.1.0"
solana-logger = "2.1.0"
solana-program-runtime = "2.1.0"
solana-sdk = "2.1.0"
solana-svm = "2.1.0"
solana-system-program = "2.1.0"
spl-associated-token-account = "4.0.0"
spl-token = "6.0.0"
termcolor = "1.4.1"


[dev-dependencies]
solana-test-validator = "2.1.0"
tokio = {version = "1.41.1", features = ["rt", "macros", "sync", "time", "full"]}
